adding js function to handle course data with ajax

--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
 
               <!-- REPLACE THIS CONTENT WITH DATA PULLED IN FROM classData.js -->
 
-              <p class="text-muted"><span class="text-primary"></span></p>
-              <p></p>
+              <p class="text-muted"><span class=" text-primary course-name"></span><span class="text-primary course-code"></span></p>
+              <p class="prof-name"></p>
               <!-- class times go here -->
-              <ul class="list-inline"></ul>
+              <ul class="list-inline">
+                <li></li>
+                <li></li>
+              </ul>
 
               <!-- END DYNAMIC DATA -->
             </div>
@@ -133,7 +136,7 @@
               <article class="courseInfo">
 
                 <!-- REPLACE ALL OF THIS CONTENT WITH DATA FROM classData.js -->
-                <h2></h2>
+                <h2 class="course-des"></h2>
                 <hr>
                 <h3>Course Description:</h3>
                 <p></p>
